--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h2>
         <h3> And also even more awsome in being human</h3>
         <h4 class='mono'>Currently spending most of my time:</h4>
-      <p class='mono'>📖 Making stories about empowerd women, equality and the power of communities for <a href='www.femma.be' target="_blank"> non-profit called Femma</a></p>
+      <p class='mono'>📖 Making stories about empowered women, equality and the power of communities for <a href='www.femma.be' target="_blank"> non-profit called Femma</a></p>
   <p class='mono'>✍🏽 Writing in-depth blogposts as <a href='/hireme.html' target="_blank"> a freelancer for companies eager to grow </a></p>
     <p class='mono'>🎙️ Hosting a podcast called <a href='www.loopuitderatrace.be' target="_blank">Loop Uit De Rat Race </a> together with Lobke Gielkens(dutch).</p>
     <p class='mono'>🤭 Aprendiendo Español (with varying degrees of success)</p>
