--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <header>
 
 </header>
+<div class="divider">
+
+
 <section>
   <div class="homepage-foto">
     <div class="header">
@@ -62,5 +65,6 @@
       </div>
   </div>
 </section>
+</div>
   </body>
 </html>
