link naar medium blog toegevoegd

--- a/huurmij.html
+++ b/huurmij.html
@@ -19,7 +19,7 @@
                 <ul id="menu">
                 <li><a href="/">Nieuwsbrief</a></li>
 
-
+<li><a href="https://medium.com/wildgroei">Blog</a></li>
 
                 <li><a href="huurmij.html">Huur mij</a></li>
             </ul>
