--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="checkbox" id="menu-menu" role="button">
                 <ul id="menu">
                 <li><a href="/">Nieuwsbrief</a></li>
-
+<li><a href="https://medium.com/wildgroei">Blog</a></li>
 
 
                 <li><a href="huurmij.html">Huur mij</a></li>
