--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="divider">
 
 
-<section>
+<section class="center">
   <div class="homepage-foto">
     <div class="header">
      <div class="logo">
