--- a/blog.html
+++ b/blog.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
   <link rel="stylesheet" href="/css/nav.css">
     <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/blogtegel.css">
   </head>
   <body>
 
-      <div class="header">
        <div class="logo">
+         <h3>JADE YORKS</h3>
+       </div>
 
-      <h3>JADE YORKS</h3> </div>
-        <div class="MENU">
-          <nav>
-      <div>
 
     <section class="section">
       <div class="container">
@@ -25,18 +23,18 @@
         <!-- FIRST ROW -->
         <div class="tile is-ancestor">
           <div class="tile is-parent">
-            <article class="tile is-child red post">
+            <article class="tile is-child red post tegel tegel-1">
               <a class="post__category" href="">Video Marketing</a>
               <h2 class="post__title">5 handige tips om vandaag nog aan de slag te gaan met video marketing</h2>
               <div class="post__content">Veel te weinig bedrijven en organisaties beseffen dat ze eigenlijk al alles in huis hebben om succesvol aan de slag te gaan met video marketing. Ook als ze niet zwemmen in het geld. Wat zeg ik, zéker als ze niet zwemmen in het geld.</div>
-              <a class="post__permalink" href="">Learn more</a>
+              <a class="post__permalink" href="">Lees verder</a>
             </article>
           </div>
 
           <div class="tile is-6 is-parent">
             <article class="tile is-child pink post">
-              <a class="post__category" href="">Other</a>
-              <h2 class="post__title">Blog #2</h2>
+              <a class="post__category" href="">Maatschappij</a>
+              <h2 class="post__title">Zeggen dat je geen racist bent is niet meer genoeg</h2>
               <div class="post__content">Pellentesque vestibulum dui in mauris varius, quis semper justo fringilla. Curabitur nec suscipit velit, eu aliquam sem. Aliquam erat volutpat. Praesent volutpat tincidunt porta. Mauris a maximus elit. Etiam ante tortor, faucibus sit amet gravida
                 eget, accumsan et metus. Morbi sem metus, suscipit ac diam eget, aliquam pharetra est. Duis hendrerit nibh vel mi rhoncus sagittis. Suspendisse et lectus cursus, iaculis risus vitae, convallis nunc.</div>
               <a class="post__permalink" href="">Learn more</a>
