--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <input type="checkbox" id="menu-menu" role="button">
                 <ul id="menu">
                 <li><a href="/">Nieuwsbrief</a></li>
-<li><a href="https://medium.com/wildgroei">Blog</a></li>
+<li><a href="https://medium.com/wildgroei" target="_blank">Blog</a></li>
+<li><a href="https://www.projectsmartphone.com/"target="_blank">Project Smartphone</a></li>
 
-
-                <li><a href="huurmij.html">Huur mij</a></li>
+                <li><a href="about.html">Over mij</a></li>
+                  <li><a href="contact.html">Contact</a></li>
             </ul>
     </div>
     </nav>
