--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/nav.css">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title></title>
+<link rel="icon" href="flavicon.ico">
+    <title>About Jade Yorks</title>
   </head>
   <body>
 <header>
