--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
 <link rel="stylesheet" href="/css/nav.css">
 <link rel="stylesheet" href="/css/contact.css">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-    <title></title>
+  <link rel="icon" href="flavicon.ico">
+  <title>Contact met Jade Yorks</title>
   </head>
   <body>
 <header>
