--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/css/nav.css">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link rel="icon" href="flavicon.ico">
-    <title></title>
+    <title>Jade Yorks - contentmaker</title>
   </head>
   <body>
 <header>
