nieuwe copy homepage en about

--- a/about.html
+++ b/about.html
@@ -64,12 +64,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h1>Hi, ik ben Jade
     <span class="enters">en ik maak verhalen</span>
   </h1>
-  <p class ='nieuwsbrief-uitleg'>Ooit was het mijn droom om journalist te zijn, maar dat hijgen en jagen achter het laatste nieuws bleek niet zo mijn ding.
- </p>
-  <p class ='nieuwsbrief-uitleg'>Verhalen maken daarentegen is waar mijn hart wel heerlijk gepassioneerd van klopt. Liefst doe ik hele dagen lang aan luisteren, schrijven en boetseren, om vervolgens de juiste boodschap mooi en op maat in een reeks verhalen te verpakken. Heerlijk.
-</p>
-<p class ='nieuwsbrief-uitleg'>Mijn missie is om mensen en bedrijven die het beste voor hebben met de wereld te helpen om hun boodschap bij de juiste mensen over te brengen. Niet als vluchtig vergeten nieuwsfeiten, maar als aantrekkelijke verhalen waar mensen maar niet over uitgepraat raken. Noem het gerust verhalen die iets losmaken: een emotie, een andere visie of simpelweg een portemonnee.</p>
+  <p class ='nieuwsbrief-uitleg'>Ik ben een journalist die hijgen achter het laatste nieuws maar niks vindt. Noem me gerust ook een schrijver, hardloper, moeder of gewoon Jade.
 
+ </p>
+  <p class ='nieuwsbrief-uitleg'> Ik ben altijd gefascineerd geweest over hoe de wereld in elkaar zit en wat we daaraan kunnen veranderen. Ik geloof dat het allemaal beter en mooier kan. Mits een beetje geduld, liefde en samenwerking. Dat het uiteindelijk goedkomt, is iets waar ik niet aan twijfel.
+
+
+<p class ='nieuwsbrief-uitleg'>Ik ben een geboren en getogen Hagenees met Surinaamse roots. Via Paramaribo raakte ik verzeild in Antwerpen, maar mijn hart maakt nog steeds sprongetjes bij de gedachte aan wonen in Chiang Mai. Misschien ooit. Je weet maar nooit.
+</p>
 
 
 
@@ -83,33 +85,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class='deel-drie'>
 
 <div class='talent-content nieuwsbrief-uitleg'>
-  <h3> Overdag ben ik druk met:
+  <h3> Waarover ik graag met je praat:
 </h3>
 
 <div class="talents-ruimte een-talent">
 
 
+<p>Ongelijkheid bestrijden, mentale gezondheid, storytelling, marketing, online communities, podcasts, ondernemerschap, productiviteit versus creativiteit, samen leven in een samenleving, technologie voor the greater good, hardlopen en doorslapende kleuters (is dat überhaupt mogelijk?).
+</p>
 
-  <p> 📝 verhalen maken voor <a href="www.femma.be">Femma</a>.</p>
-<p>❤️ levenslessen geven aan mijn 2 lieve,<span class="enter"> maar veel te energieke kids</span></p>
-<p>🍜 genieten van lekker eten met leuke mensen.</p>
-  <p>🏃🏾‍♀️ sporten: hardlopen, zwemmen én softballen </p>
-</div>
-<h3> ‘s Avonds ben ik nogal gepassioneerd over:</h3>
-<div class="talents-ruimte twee-talent">
-
-
-
-
-  <p>🎙️co-host zijn van de podcast <a href="www.loopuitderatrace.be">Loop Uit De Rat Race</a>.</p>
-
-
-  <p>📱workshops geven over professionele <a href="www.projectsmartphone.com">video’s  maken met je smartphone </a> .</p>
-
- <p>💻 aanstekelijke blogverhalen maken voor bedrijven. Altijd op maat van hun favoriete (potentiële) klanten. </p>
 
 
 </div>
+<h3> Laat zeker van je horen als een van deze thema’s jou aanspreekt. Een goed gesprek brengt altijd veel goeds.
+</h3>
 
 </div>
 </section>
