--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="deel-twee">
 <div class="center-mob">
 
-  <h1>Wildgroei</h1>
-<h2>Een nieuwsbrief over storytelling en marketing <span class="enter-large"> voor ondernemers met een geweten. </span>
-</h2>
-<p class ='nieuwsbrief-uitleg'>Winst is belangrijk. Dat weten we allemaal. Maar de ondernemers die ik bewonder streven ook nog iets anders na: de wereld iets beter achterlaten dat ze haar aantroffen. </p>
-<p class ='nieuwsbrief-uitleg'>In deze tweewekelijkse nieuwsbrief neem ik je mee op avontuur langs inspirerende verhalen, tips en tactieken om meer te maken van jezelf, je content marketingstrategie én de samenleving.</p>
+  <h1>Hi, Ik ben Jade en ik maak verhalen</h1>
+
+<p class ='nieuwsbrief-uitleg'> Ik geloof dat het allemaal beter en mooier kan. Mits een beetje geduld, liefde en samenwerking.</p>
+<p class ='nieuwsbrief-uitleg'>Dat optimisme proef je in mijn verhalen over storytelling, marketing, de strijd tegen ongelijkheid, mentale gezondheid, productiviteit en technologie.</p>
+<p class ='nieuwsbrief-uitleg'>Ga met mij mee op avontuur en schrijf je in voor mijn nieuwsbrief.</p>
 <div class="nieuwsbrief">
 
 
