--- a/nieuws.html
+++ b/nieuws.html
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-KN4NV4R');</script>
 <!-- End Google Tag Manager -->
     <meta charset="utf-8">
-    <title>Blog</title>
+    <title>Nieuws</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
