van alles, maar wat zichtbaar is, is mijn podcast link

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <input type="checkbox" id="menu-menu" role="button">
                 <ul id="menu">
                 <li><a href="/">Nieuwsbrief</a></li>
+                  <li><a href="http://www.loopuitderatrace.be/">Podcast</a></li>
                 <li><a href="https://medium.com/wildgroei" target="_blank">Blog</a></li>
                 <li><a href="https://www.projectsmartphone.com/"target="_blank">Project Smartphone</a></li>
 
