--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <label for="menu-menu" class="menu-menu">MENU</label>
             <input type="checkbox" id="menu-menu" role="button">
                 <ul id="menu">
-                <li><a href="/">Nieuwsbrief</a></li>
+                <li><a href="http://www.loopuitderatrace.be/">Podcast</a></li>
 <li><a href="https://medium.com/wildgroei" target="_blank">Blog</a></li>
 <li><a href="https://www.projectsmartphone.com/"target="_blank">Project Smartphone</a></li>
 
@@ -62,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <section class="deel-twee">
 <div class="center-mob">
 
-  <h1>Hi, Ik ben Jade en ik maak verhalen</h1>
+  <h1>HI, IK BEN JADE EN IK MAAK VERHALEN</h1>
 
 <p class ='nieuwsbrief-uitleg'> Ik geloof dat het allemaal beter en mooier kan. Mits een beetje geduld, liefde en samenwerking.</p>
 <p class ='nieuwsbrief-uitleg'>Dat optimisme proef je in mijn verhalen over storytelling, marketing, de strijd tegen ongelijkheid, mentale gezondheid, productiviteit en technologie.</p>
